# SpectrumCov

./: CMakeLists.txt  README.md  install.sh
.qt_for_python/rcc/: images.py
.qt_for_python/uic/: about.py  help.py  mainwindow.py
data/: Exposure_gamma_ConversionCoefficients.txt  H*(10)_gamma_ConversionCoefficients.txt  H*(10)_neutron_ConversionCoefficients.txt  Hp(10)_gamma_ConversionCoefficients.txt
src/: CMakeLists.txt  ReadCoefficients.cpp  ReadCoefficients.h  about.cpp  about.ui  help.cpp  help.ui  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
